<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.MainActivity">

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/Margin20dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/tv_Month_and_year"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="Hello World "
            android:textAlignment="center"
            android:textSize="@dimen/Margin20sp"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll1"
        android:layout_marginStart="@dimen/Margin15dp"
        android:layout_marginTop="@dimen/Margin30dp"
        android:layout_marginEnd="@dimen/Margin15dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/black"
            android:text="@string/sun"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/Margin15sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mon"
            android:textAlignment="center"
            android:textSize="@dimen/Margin15sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/black"
            android:text="@string/tue"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/Margin15sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/wed"
            android:textAlignment="center"
            android:textSize="@dimen/Margin15sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/black"
            android:text="@string/thur"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/Margin15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fri"
            android:textAlignment="center"
            android:textSize="@dimen/Margin15sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/black"
            android:text="@string/sat"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/Margin15sp" />


    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/Rv_Calendar_Date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll2"
        android:layout_marginStart="@dimen/Margin30dp"
        android:layout_marginTop="@dimen/Margin10dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_add_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:layout_marginStart="@dimen/Margin20dp"
        android:layout_marginTop="@dimen/Margin20dp"
        android:layout_marginEnd="@dimen/Margin20dp"
        android:layout_marginBottom="@dimen/Margin20dp"
        android:src="@drawable/ic_baseline_add_24" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/Offline_RecyclerView"
        android:layout_margin="@dimen/Margin20dp"
        android:layout_below="@id/Rv_Calendar_Date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</RelativeLayout>